# vulkan-mesh-viewer

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile_run.sh  imgui.ini
externs/: CMakeLists.txt
externs/nativefiledialog/: CMakeLists.txt
models/: fgc_skeleton.mtl  horse_statue_01.mtl  kitchen.mtl  ship_pinnace_1k.mtl
shaders/: .textured_lit.frag.kate-swp  colored_triangle.vert  textured_lit.frag  tri_mesh.vert  tri_mesh.vert.spv
src/: vk_camera.h  vk_engine.cpp  vk_engine.h  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp
